--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@ant-design/nextjs-registry": "^1.0.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.1.0"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
