--- a/package.json
+++ b/package.json
@@ -12,14 +12,11 @@
     "@ant-design/nextjs-registry": "^1.0.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18",
-    "styled-components": "^6.1.8"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
-  },
-  "resolutions": {
-    "styled-components": "^5"
+    "eslint-config-next": "14.1.0",
+    "sass": "^1.71.1"
   }
 }
