--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.0",
+    "axios": "^1.6.7",
+    "dayjs": "^1.11.10",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
