--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "@ant-design/nextjs-registry": "^1.0.0",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^14.1.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "^14.1.3",
     "sass": "^1.71.1"
   }
 }
