--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^14.1.3",
     "eslint": "^8",
     "eslint-config-next": "^14.1.3",
+    "eslint-plugin-react": "^7.34.1",
     "sass": "^1.71.1"
   }
 }
